[gd_scene load_steps=7 format=3 uid="uid://mul2lo64g5tv"]

[ext_resource type="Script" path="res://scenes/path_to_barley_and_stage.gd" id="1_2qtlp"]
[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_7lfgw"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_umomj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_as6kd"]
size = Vector2(20, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04755"]
size = Vector2(74, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1co8"]
size = Vector2(20, 74)

[node name="path_to_barley_and_stage" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_2qtlp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_7lfgw")]
layer_0/tile_data = PackedInt32Array(2490433, 65541, 1, 2490434, 5, 2, 2490431, 131077, 0, 2490432, 65541, 1, 2490430, 65541, 1, 2359353, 393221, 0, 2359354, 393221, 0, 2359355, 393221, 0, 2359356, 393221, 0, 2359359, 393221, 0, 2359360, 393221, 0, 2359361, 393221, 0, 2359362, 393221, 0, 2424889, 393221, 2, 2424890, 393221, 2, 2424891, 393221, 2, 2424892, 393221, 2, 2424893, 393221, 2, 2424894, 393221, 2, 2424895, 393221, 2, 2424896, 393221, 2, 2424897, 393221, 2, 2424898, 393221, 2, 2359358, 393221, 3, 2359357, 327685, 3, 2293821, 327685, 1, 2228285, 327685, 1, 2293822, 458757, 1, 2228286, 458757, 1, 2490425, 65541, 1, 2490426, 65541, 0, 2490427, 65541, 0, 2490428, 65541, 2, 2490429, 65541, 1, 2293820, 131077, 2, 2228284, 65541, 1, 2293823, 65541, 0, 2228287, 5, 1)
layer_1/tile_data = PackedInt32Array(2293826, 65539, 1, 2293825, 65539, 1, 2293824, 65539, 1, 2293817, 65539, 1, 2293818, 65539, 1, 2293819, 65539, 1, 2228281, 3, 0, 2228282, 3, 0, 2228283, 3, 0, 2228288, 3, 0, 2228289, 3, 0, 2228290, 3, 0)
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(2490430, 393219, 0, 2228281, 393219, 2, 2228282, 393219, 2, 2228283, 393219, 2, 2228284, 458755, 2, 2228287, 327683, 2, 2228288, 393219, 2, 2228289, 393219, 2, 2228290, 393219, 2, 2490425, 393219, 0, 2490426, 393219, 0, 2490427, 393219, 0, 2490428, 393219, 0, 2490429, 393219, 0, 2490431, 393219, 0, 2490432, 393219, 0, 2490433, 393219, 0, 2490434, 393219, 0, 2555970, 393219, 1, 2555969, 393219, 1, 2555968, 393219, 1, 2555967, 393219, 1, 2555966, 393219, 1, 2555965, 393219, 1, 2555964, 393219, 1, 2555963, 393219, 1, 2555962, 393219, 1, 2555961, 393219, 1)
layer_3/tile_data = PackedInt32Array()
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2359353, 393241, 2, 2359354, 393241, 2, 2359355, 393241, 2, 2359356, 458777, 2, 2293820, 458777, 1, 2228284, 458777, 1, 2359359, 327705, 2, 2359360, 393241, 2, 2359361, 393241, 2, 2359362, 393241, 2, 2293823, 327705, 1, 2228287, 327705, 1, 2293819, 393241, 1, 2293818, 393241, 1, 2293817, 393241, 1, 2293824, 393241, 1, 2293825, 393241, 1, 2293826, 393241, 1, 2228290, 393241, 1, 2228289, 393241, 1, 2228288, 393241, 1, 2228283, 393241, 1, 2228282, 393241, 1, 2228281, 393241, 1)

[node name="Christina" parent="." instance=ExtResource("2_umomj")]
position = Vector2(1104, 506)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 793
limit_top = 415
limit_right = 1113
limit_bottom = 595
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="path_barley_stage_exit_point" type="Area2D" parent="."]
position = Vector2(783, 521)

[node name="CollisionShape2D" type="CollisionShape2D" parent="path_barley_stage_exit_point"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_as6kd")

[node name="barley_office_ext_transit_point" type="Area2D" parent="."]
position = Vector2(928, 405)

[node name="CollisionShape2D" type="CollisionShape2D" parent="barley_office_ext_transit_point"]
position = Vector2(27, 0)
shape = SubResource("RectangleShape2D_04755")

[node name="stage_transit_point" type="Area2D" parent="."]
position = Vector2(1123, 486)

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage_transit_point"]
position = Vector2(0, 27)
shape = SubResource("RectangleShape2D_l1co8")

[connection signal="body_entered" from="path_barley_stage_exit_point" to="." method="_on_path_barley_stage_exit_point_body_entered"]
[connection signal="body_exited" from="path_barley_stage_exit_point" to="." method="_on_path_barley_stage_exit_point_body_exited"]
[connection signal="body_entered" from="barley_office_ext_transit_point" to="." method="_on_barley_office_ext_transit_point_body_entered"]
[connection signal="body_exited" from="barley_office_ext_transit_point" to="." method="_on_barley_office_ext_transit_point_body_exited"]
[connection signal="body_entered" from="stage_transit_point" to="." method="_on_stage_transit_point_body_entered"]
[connection signal="body_exited" from="stage_transit_point" to="." method="_on_stage_transit_point_body_exited"]
